--- a/index.html
+++ b/index.html
@@ -62,15 +62,18 @@
             // Physical Constants
             const float floorGravity = 0.0;
             const float particleGravity = 100000.0;
-            const float flavorAttraction = -100.0;
+            const float particleGravityPower = 6.0;
+            const float flavorAttraction = -1000000.0;
             const float numFlavors = 4.0;
             const float bounceDampeningFactor = 0.99;
-            const float maxAccel = 1.0;
+            const float maxAccel = 999999.0;
             const float pointerRadius = 0.40;
             const float pointerSlowFactor = 0.0;
             const float pointerPullFactor = 0.4;
             const float energyGain = 0.0; // it's warmer at the top, and the particles will grow
-            const float decayRate = 0.0; // chance that a particle randomly breaks
+            const float decayRate = 0.00003; // chance that a particle randomly breaks
+            const float distanceCutoff = 0.000000001;
+            const float simulationSpeed = 0.002;
 
             const float PI = 3.1415926535897932384626433832795;
             const float attractionAngle = 0.0 / 360.0 * PI;
@@ -79,8 +82,8 @@
                 -sin(attractionAngle), cos(attractionAngle));
 
             // Derived particle properties, based on flavor
-            const float maxVs[] = float[](0.05, 0.05, 0.030, 0.03);
-            const float weights[] = float[](0.000001, 1.0, 5000.0, 10000.0);
+            const float maxVs[] = float[](1.0, 1.0, 1.0, 1.0);
+            const float weights[] = float[](0.00000000001, 1.0, 5000.0, 1000.0);
             const vec3 colors[] = vec3[](
                 vec3(1.0, 0.0, 0.7),
                 vec3(0.0, 1.0, 1.0),
@@ -145,7 +148,7 @@
                 state.z += 0.0001;
 
                 // Movement
-                state.xy += oldVelocity.xy;
+                state.xy += oldVelocity.xy * simulationSpeed;
 
                 // Gain/loss of energy
                 state.z += state.y * energyGain;
@@ -164,10 +167,14 @@
                         otherWeight = weights[otherFlavor];
                         dist = (otherState.xy - state.xy) / scale;
                         dist = (attractionRotationMatrix * dist);
-                        dist /= 1000.0;
+                        if (distLength < distanceCutoff) { continue; }
+                        dist /= 100000.0;
                         distLength = length(dist);
-                        if (distLength < 0.000000001) { continue; }
-                        accel += dist * otherWeight / pow(distLength, 4.0) * particleGravity / weight;
+                        accel += dist
+                            * otherWeight
+                            / pow(distLength, particleGravityPower)
+                            * particleGravity
+                            / weight;
                     }
                     if (length(accel) > maxAccel) {
                         accel *= vec2(maxAccel / length(accel));
@@ -182,29 +189,29 @@
                     vec2 dist;
                     vec2 accel;
                     vec4 otherState;
-                    float repulsion = 100.0 * pow(numFlavors - 1.0, 2.0);
+                    float repulsion = 10.0 * pow(numFlavors - 1.0, 4.0);
                     for (int i = 0; i < particleLimit; i++) {
                         if (i == currentIndex) { continue; }
                         otherState = allStates[i];
                         otherFlavor = int(floor(otherState.w * numFlavors));
                         dist = attractionRotationMatrix * (otherState.xy - state.xy) / scale;
                         distLength = length(dist);
-                        if (distLength < 0.000000001) {
+                        if (distLength < distanceCutoff) {
                             continue;
                         }
-                        if (flavor == otherFlavor) {
-                            dist /= 10.0;
+                        if (flavor != otherFlavor) {
+                            dist /= 100.0;
                         }
                         if (distLength < 0.10) {
                             accel += dist
                                 / distLength
-                                * pow((distLength * 10.0), 2.0)
-                                * flavorAttraction * 10000000.0
+                                * pow((distLength * 100.0), 3.0)
+                                * flavorAttraction * 10000.0
                                 * (flavor == otherFlavor ? repulsion : -1.0)
                                 / weight;
                         }
                         accel += dist.xy
-                            / pow(distLength, 4.0)
+                            / pow(distLength, 3.0)
                             * flavorAttraction
                             * (flavor == otherFlavor ? repulsion : -1.0)
                             / weight;
