disable gravity again
after gravity was fixed, it looked different than the original Aevoxus
which had zero gravity due to a bug (...or feature?), so I'm just
setting the gravity constant to zero

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
             // Physical Constants
             const float floorGravity = 0.0;
-            const float particleGravity = 100000000000.0;
+            const float particleGravity = 0.0;
             const float particleGravityPower = 3.0;
             const float flavorAttraction = -1000000.0;
             const float numFlavors = 3.0;
