--- a/index.html
+++ b/index.html
@@ -61,19 +61,20 @@
 
             // Physical Constants
             const float floorGravity = 0.0;
-            const float particleGravity = 100000000000.0;
+            const float particleGravity = 0.0000001;
             const float particleGravityPower = 3.0;
-            const float flavorAttraction = -1000000.0;
-            const float numFlavors = 3.0;
-            const float bounceDampeningFactor = 0.99;
+            const float flavorAttraction = -0.01;
+            const float flavorAttractionPower = 3.0;
+            const float numFlavors = 2.0;
+            const float bounceDampeningFactor = 0.70;
             const float maxAccel = 999999.0;
             const float pointerRadius = 0.40;
-            const float pointerSlowFactor = 0.0;
-            const float pointerPullFactor = 0.4;
+            const float pointerSlowFactor = 0.1;
+            const float pointerPullFactor = 0.01;
             const float energyGain = 0.0; // it's warmer at the top, and the particles will grow
-            const float decayRate = 0.00003; // chance that a particle randomly breaks
+            const float decayRate = 0.0; // chance that a particle randomly breaks
             const float distanceCutoff = 0.000000001;
-            const float simulationSpeed = 0.000000001;
+            const float simulationSpeed = 0.000000000001;
 
             const float PI = 3.1415926535897932384626433832795;
             const float attractionAngle = 0.0 / 360.0 * PI;
@@ -82,8 +83,8 @@
                 -sin(attractionAngle), cos(attractionAngle));
 
             // Derived particle properties, based on flavor
-            const float maxVs[] = float[](0.005 / simulationSpeed);
-            const float weights[] = float[](0.000001, 1.0, 5000.0, 1000.0);
+            const float maxVs[] = float[](0.05 / simulationSpeed);
+            const float weights[] = float[](1.0, 2000.0);
             const vec3 colors[] = vec3[](
                 vec3(1.0, 0.0, 0.7),
                 vec3(0.0, 1.0, 1.0),
@@ -113,19 +114,21 @@
                                      vec2(12.9898, 78.233))) * 43758.5453);
             }
 
+            int getFlavor(vec4 state) {
+                return int(floor(state.w * numFlavors));
+            }
+
             void main() {
                 state = oldState;
                 velocity = oldVelocity;
                 randomSeed = random;  // randomize the seed to make each run unique, if desired
 
-                float scale = 1.0;
-
                 gl_Position.xy = state.xy;
                 gl_Position.zw = vec2(0.0, 1.0);
-                gl_PointSize = 4.0;
+                gl_PointSize = 2.0;
 
                 // Derived attributes
-                int flavor = int(floor(state.w * numFlavors));
+                int flavor = getFlavor(state);
                 float maxV = maxVs[flavor];
                 float weight = weights[flavor];
                 weight *= 10000.0 * length(velocity.xy) / maxV + 1.0;
@@ -163,76 +166,40 @@
                     for (int i = 0; i < particleLimit; i++) {
                         if (i == currentIndex) { continue; }
                         otherState = allStates[i];
-                        otherFlavor = int(floor(otherState.w * numFlavors));
+                        otherFlavor = getFlavor(otherState);
                         otherWeight = weights[otherFlavor];
-                        dist = (otherState.xy - state.xy) / scale;
+                        dist = (otherState.xy - state.xy);
                         dist = (attractionRotationMatrix * dist);
                         if (length(dist) < distanceCutoff) { continue; }
                         dist /= 100000.0;
                         accel += dist
                             * otherWeight
                             / pow(length(dist), particleGravityPower)
-                            * particleGravity
-                            / weight;
+                            * particleGravity;
                     }
                     if (length(accel) > maxAccel) {
                         accel *= vec2(maxAccel / length(accel));
                     }
-                    velocity.xy += accel;
+                    velocity.xy += accel / weight;
                 }
 
                 // Attraction between particles based on flavor
                 if (flavorAttraction != 0.0) {
-                    int otherFlavor;
-                    float distLength;
-                    vec2 dist;
-                    vec2 accel;
-                    vec4 otherState;
-                    float repulsion = 10.0 * pow(numFlavors - 1.0, 2.0);
                     for (int i = 0; i < particleLimit; i++) {
                         if (i == currentIndex) { continue; }
-                        otherState = allStates[i];
-                        otherFlavor = int(floor(otherState.w * numFlavors));
-                        dist = attractionRotationMatrix * (otherState.xy - state.xy) / scale;
-                        distLength = length(dist);
-                        if (distLength < distanceCutoff) {
-                            continue;
+                        vec4 otherState = allStates[i];
+                        vec2 dist = attractionRotationMatrix * (otherState.xy - state.xy);
+                        if (length(dist) < distanceCutoff) { continue; }
+                        int otherFlavor = getFlavor(otherState);
+                        dist /= 100.0;
+                        vec2 accel = dist /
+                            pow(length(dist), flavorAttractionPower)
+                            * flavorAttraction;
+                        if (flavor != otherFlavor) { accel *= -1.0; }
+                        if (length(accel) > maxAccel) {
+                            accel *= vec2(maxAccel / length(accel));
                         }
-                        if (flavor != otherFlavor) {
-                            dist /= 100.0;
-                        }
-                        //if (distLength < 0.10) {
-                        //    accel += dist
-                        //        / distLength
-                        //        * pow((distLength * 100.0), 3.0)
-                        //        * flavorAttraction * 10000.0
-                        //        * (flavor == otherFlavor ? repulsion : -1.0)
-                        //        / weight;
-                        //}
-                        accel += dist.xy
-                            / distLength
-                            / pow(distLength * 1000.0, 3.0)
-                            * flavorAttraction * 1000000.0
-                            * (flavor == otherFlavor ? repulsion : -1.0)
-                            / weight;
-                    }
-                    if (length(accel) > maxAccel) {
-                        accel *= vec2(maxAccel / length(accel));
-                    }
-                    velocity.xy += accel;
-                }
-
-                // Movement towards the mouse pointer
-                if (userInput.b == 1.0) {
-                    float dist = distance(state.xy, userInput.xy);
-                    if (dist <= pointerRadius) {
-                        dist /= pointerRadius;  // normalize distance to 1.0
-                        if (pointerSlowFactor != 0.0) {
-                            velocity.xy *= 1.0 - pointerSlowFactor * (1.0 - dist);
-                        }
-                        if (pointerPullFactor != 0.0) {
-                            velocity.xy += pointerPullFactor * (userInput.xy - state.xy) * dist;
-                        }
+                        velocity.xy += accel * weight;
                     }
                 }
 
@@ -244,16 +211,33 @@
                     if (state[dimension] < -1.0) {
                         state[dimension] = -1.0;
                         velocity[dimension] *= -bounceDampeningFactor;
+                        velocity[1 - dimension] *= bounceDampeningFactor;
                     }
                     else if (state[dimension] > 1.0) {
                         state[dimension] = 1.0;
                         velocity[dimension] *= -bounceDampeningFactor;
+                        velocity[1 - dimension] *= bounceDampeningFactor;
                     }
                 }
 
                 // Limit velocity
                 if (length(velocity.xy) > maxV) {
                     velocity.xy *= vec2(maxV / length(velocity.xy));
+                }
+
+                // Movement towards the mouse pointer
+                if (userInput.b == 1.0) {
+                    float dist = distance(state.xy, userInput.xy);
+                    if (dist <= pointerRadius) {
+                        dist /= pointerRadius;  // normalize distance to 1.0
+                        if (pointerSlowFactor != 0.0) {
+                            velocity.xy *= 1.0 - pointerSlowFactor * (1.0 - dist);
+                        }
+                        if (pointerPullFactor != 0.0) {
+                            velocity.xy += pointerPullFactor * (userInput.xy - state.xy)
+                                * dist / simulationSpeed;
+                        }
+                    }
                 }
 
                 // Limit energy
