--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <canvas id="canvas" style="display: block; height: 100vh; width: 100vw;"></canvas>
         <script>
             var parameters = {
-                particleLimit: 1024,
+                particleLimit: 64,
                 extraUniforms: 1, // Besides "allStates", we use 1 more uniform: "userInput"
                 logFPS: true,
             }
@@ -61,20 +61,20 @@
 
             // Physical Constants
             const float floorGravity = 0.0;
-            const float particleGravity = 0.0000001;
+            const float particleGravity = 0.0000000001;
             const float particleGravityPower = 3.0;
-            const float flavorAttraction = -0.01;
+            const float flavorAttraction = -0.00001;
             const float flavorAttractionPower = 4.0;
             const float numFlavors = 2.0;
-            const float bounceDampeningFactor = 0.70;
+            const float bounceDampeningFactor = 1.0;
             const float maxAccel = 999999.0;
             const float pointerRadius = 0.40;
-            const float pointerSlowFactor = 0.1;
+            const float pointerSlowFactor = 1.0;
             const float pointerPullFactor = 0.01;
             const float energyGain = 0.0; // it's warmer at the top, and the particles will grow
             const float decayRate = 0.0; // chance that a particle randomly breaks
             const float distanceCutoff = 0.000000001;
-            const float simulationSpeed = 1.0;
+            const float simulationSpeed = 0.00001;
 
             const float PI = 3.1415926535897932384626433832795;
             const float attractionAngle = 0.0 / 360.0 * PI;
@@ -127,6 +127,8 @@
                 gl_Position.zw = vec2(0.0, 1.0);
                 gl_PointSize = 2.0;
 
+                float scale = 1.0;
+
                 // Derived attributes
                 int flavor = getFlavor(state);
                 float maxV = maxVs[flavor];
@@ -168,7 +170,7 @@
                         otherState = allStates[i];
                         otherFlavor = getFlavor(otherState);
                         otherWeight = weights[otherFlavor];
-                        dist = (otherState.xy - state.xy);
+                        dist = (otherState.xy - state.xy) / scale;
                         dist = (attractionRotationMatrix * dist);
                         if (length(dist) < distanceCutoff) { continue; }
                         dist /= 100000.0;
@@ -188,10 +190,10 @@
                     for (int i = 0; i < particleLimit; i++) {
                         if (i == currentIndex) { continue; }
                         vec4 otherState = allStates[i];
-                        vec2 dist = attractionRotationMatrix * (otherState.xy - state.xy);
+                        vec2 dist = attractionRotationMatrix * (otherState.xy - state.xy) / scale;
                         if (length(dist) < distanceCutoff) { continue; }
                         int otherFlavor = getFlavor(otherState);
-                        dist /= 10.0;
+                        dist /= 300.0;
                         vec2 accel = dist /
                             pow(length(dist), flavorAttractionPower)
                             * flavorAttraction;
