improve performance of distance function
Used this python code to figure out the formula:

    """
    >>> distance(0.5, -0.5)
    -1.0
    >>> distance(-0.5, -0.5)
    0.0
    >>> distance(-0.5, 0.5)
    1.0
    >>> distance(0.5, -0.5)
    -1.0
    >>> distance(0.5, 0.2)
    -0.3
    >>> distance(0.5, -0.2)
    -0.7

    The following require wrap-around:

    >>> distance(0.9, -0.7)
    0.4
    >>> distance(0.5, -0.8)
    0.7
    >>> distance(-0.9, 0.9)
    -0.2
    """

    def distance(x1, x2):
        return x2-x1

    def distance(x1, x2):
        d = x2-x1
        if d > 1:
            d -= 2
        if d < -1:
            d += 2
        return d

    if __name__ == '__main__':
        import doctest
        doctest.testmod()

--- a/index.html
+++ b/index.html
@@ -120,20 +120,18 @@
             }
 
             vec2 getDistance(vec2 me, vec2 other) {
-                if (!wrapBox) {
-                    return other.xy - me.xy;
+                vec2 dif = other.xy - me.xy;
+                if (wrapBox) {
+                    if (dif.x > 1.0)
+                        dif.x -= 2.0;
+                    else if (dif.x < -1.0)
+                        dif.x += 2.0;
+                    if (dif.y > 1.0)
+                        dif.y -= 2.0;
+                    else if (dif.y < -1.0)
+                        dif.y += 2.0;
                 }
-
-                float dx, dy, min_dx = 9.9, min_dy = 9.9;
-                for (float stride = -2.0; stride < 2.1; stride += 2.0) {
-                    dx = other.x + stride - me.x;
-                    dy = other.y + stride - me.y;
-                    if (abs(dx) < abs(min_dx))
-                        min_dx = dx;
-                    if (abs(dy) < abs(min_dy))
-                        min_dy = dy;
-                }
-                return vec2(min_dx, min_dy);
+                return dif;
             }
 
             void main() {
