--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             const float decayRate = 0.0; // chance that a particle randomly breaks
             const float distanceCutoff = 0.000000001;
             const float simulationSpeed = 0.0000001;
-            const bool wrapBox = true;
+            const bool cyclicalGeometry = true; // Wrap around x- and y-coordinates on the edges?
 
             const float PI = 3.1415926535897932384626433832795;
             const float attractionAngle = 0.0; // Rotate the attraction vector. In degrees.
@@ -121,7 +121,7 @@
 
             vec2 getDistance(vec2 me, vec2 other) {
                 vec2 dif = other.xy - me.xy;
-                if (wrapBox) {
+                if (cyclicalGeometry) {
                     if (dif.x > 1.0)
                         dif.x -= 2.0;
                     else if (dif.x < -1.0)
@@ -226,7 +226,8 @@
                 // Movement towards the bottom
                 velocity.y -= floorGravity;
 
-                if (wrapBox) {
+                // Keep particles inside the universe
+                if (cyclicalGeometry) {
                     for (int dimension = 0; dimension < 2; dimension++) {
                         if (state[dimension] < -1.0)
                             state[dimension] += 2.0;
@@ -235,7 +236,6 @@
                     }
                 }
                 else {
-                // Keep particles inside the universe
                     for (int dimension = 0; dimension < 2; dimension++) {
                         if (state[dimension] < -1.0) {
                             state[dimension] = -1.0;
