--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             const float gravityScale = 100000.0; // scales the distance between particles
             const float flavorAttraction = -0.00001;
             const float flavorAttractionPower = 3.8;
-            const float flavorAttractionScale = 100.0; // scales the distance between particles
+            const float flavorAttractionScale = 300.0; // scales the distance between particles
             const float numFlavors = 3.0;
             const float bounceDampeningFactor = 1.0;
             const float maxAccel = 999999.0;
@@ -142,7 +142,7 @@
 
                 gl_Position.xy = state.xy;
                 gl_Position.zw = vec2(0.0, 1.0);
-                gl_PointSize = 4.0;
+                gl_PointSize = 2.0 + state.z * 2.0;
 
                 float scale = 1.0;
 
@@ -167,7 +167,7 @@
                     state.z = 1.0;
                     state.w = rand();
                 }
-                state.z += 0.0001;
+                state.z += 0.001;
 
                 // Movement
                 state.xy += oldVelocity.xy * simulationSpeed;
@@ -217,6 +217,20 @@
                     }
                 }
 
+                // "Game of Life"-like neighborhood checks
+                int neighbors = 0;
+                for (int i = 0; i < particleLimit; i++) {
+                    if (i == currentIndex) { continue; }
+                    vec4 otherState = allStates[i];
+                    vec2 dist = getDistance(state.xy, otherState.xy);
+                    dist = attractionRotationMatrix * dist / scale;
+                    if (length(dist) < 0.03)
+                        neighbors++;
+                }
+                if (neighbors > 30) {
+                    state.z -= 0.01;
+                }
+
                 // Keep particles inside the universe
                 if (cyclicalGeometry) {
                     for (int dimension = 0; dimension < 2; dimension++) {
@@ -262,7 +276,7 @@
                 }
 
                 // Limit energy
-                //if (state.z > 1.0) { state.z = 1.0; }
+                if (state.z > 1.0) { state.z = 1.0; }
             }
         </script>
         <script type="application/javascript" id="boilerplate">
