--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <canvas id="canvas" style="display: block; height: 100vh; width: 100vw;"></canvas>
         <script>
             var parameters = {
-                particleLimit: 1024,
+                particleLimit: 256,
                 extraUniforms: 1, // Besides "allStates", we use 1 more uniform: "userInput"
                 logFPS: true,
             }
@@ -60,13 +60,13 @@
             #version 300 es
 
             // Physical Constants
-            const float gravity = 0.000001;
+            const float gravity = -0.000000001;
             const float gravityPower = 3.0;
-            const float gravityScale = 100000.0; // scales the distance between particles
-            const float flavorAttraction = -0.00001;
+            const float gravityScale = 1.0; // scales the distance between particles
+            const float flavorAttraction = -0.00000;
             const float flavorAttractionPower = 3.8;
             const float flavorAttractionScale = 300.0; // scales the distance between particles
-            const float numFlavors = 3.0;
+            const float numFlavors = 1.0;
             const float bounceDampeningFactor = 1.0;
             const float maxAccel = 999999.0;
             const float pointerRadius = 0.40;
@@ -75,7 +75,7 @@
             const float energyGain = 0.0; // it's warmer at the top, and the particles will grow
             const float decayRate = 0.0; // chance that a particle randomly breaks
             const float distanceCutoff = 0.000000000001;
-            const float simulationSpeed = 0.0000001;
+            const float simulationSpeed = 1.0;
             const bool cyclicalGeometry = true; // Wrap around x- and y-coordinates on the edges?
 
             const float PI = 3.1415926535897932384626433832795;
@@ -142,7 +142,7 @@
 
                 gl_Position.xy = state.xy;
                 gl_Position.zw = vec2(0.0, 1.0);
-                gl_PointSize = 2.0 + state.z * 2.0;
+                gl_PointSize = 2.0 + state.z * 4.0;
 
                 float scale = 1.0;
 
@@ -151,7 +151,10 @@
                 float maxV = maxVs[flavor];
                 float weight = weights[flavor];
                 //weight *= 10000.0 * length(velocity.xy) / maxV + 1.0;
-                color = vec4(colors[flavor], 1.0);
+                color = vec4(abs(sin(state.z * PI / 2.0)) * 0.5 + 0.0,
+                             abs(sin(state.z * PI / 2.0)) * 0.7 + 0.3,
+                             abs(cos(state.z * PI / 2.0)) * 0.6 + 0.4,
+                             1.0);
 
                 // Has the user paused the simulation?
                 if (userInput.w == 1.0) { return; }
@@ -164,10 +167,9 @@
                 if (state.z < 0.001) {
                     velocity.xy = (vec2(rand(), rand()) * 2.0 - 1.0) * maxV / 10000.0;
                     state.xy = vec2(rand(), rand()) * 2.0 - 1.0;
-                    state.z = 1.0;
+                    state.z = rand() * 0.4;
                     state.w = rand();
                 }
-                state.z += 0.001;
 
                 // Movement
                 state.xy += oldVelocity.xy * simulationSpeed;
@@ -224,11 +226,14 @@
                     vec4 otherState = allStates[i];
                     vec2 dist = getDistance(state.xy, otherState.xy);
                     dist = attractionRotationMatrix * dist / scale;
-                    if (length(dist) < 0.03)
+                    if (length(dist) < 0.08)
                         neighbors++;
                 }
-                if (neighbors > 30) {
-                    state.z -= 0.01;
+                if (neighbors > 15 || neighbors < 3) {
+                    state.z -= 0.05;
+                }
+                else {
+                    state.z += 0.01;
                 }
 
                 // Keep particles inside the universe
